# elixir

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: dev-toolchain.cmake  settings.cmake
doc/Loops/: Readme.md
src/: CMakeLists.txt
src/include/elixir/base/: config.h
src/include/elixir/base/std/: functional.h
src/include/elixir/loops/: loops.h  std.h
src/include/elixir/loops/algorithms/: algorithms.h  enumerate.h  find_if.h  for_each.h
src/include/elixir/loops/common/: functors.h
src/include/elixir/loops/detail/: concepts.h  operations.h  sequence_traits.h  traits.h
src/include/elixir/loops/detail/std/: vector.h
src/include/elixir/loops/views/: filter.h  just.h  pass_through.h  range.h  transform.h
tests/: CMakeLists.txt
tests/loops/: CMakeLists.txt  main.cpp
tests/loops/algorithms/: find_if_tests.cpp  non_modifying_sequence_tests.cpp
tests/loops/views/: filter_view_tests.cpp  just_view_tests.cpp  pass_through_view_tests.cpp  range_adapter_tests.cpp  transform_view_tests.cpp
